update index file

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <main>
         <div class="content_1">
             <img class="image-photo" src="/images/AlexFoto.jpg" alt="foto-Alex">
-            <h1 class="dev-title">Desarollador Web Backend, Frontend ó FullStack </h1>
+            <h1 class="dev-title">Desarollador Web FullStack </h1>
             <p class="paragraf_1">Desarrollo Sitios Web, Servicios Rest, con diferentes tecnologias.</p>
         </div>
         <div class="central-image">
