Update css files

--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
             <nav class="menu">
                 <ul>
                     <li>
-                        <a href="/contact.html"><button>Contacto</button></a>
-                        
+                        <a href="/contact.html"><button>Contacto</button></a>                        
                     </li>
                 </ul>
             </nav>
@@ -28,12 +27,9 @@
     </header>
     <main>
         <div class="content_1">
-            <img class="image-photo" src="/images/AlexFoto.jpg" alt="foto-Alex">
+            <img class="image-photo" src="/images/Logo 6.JPG" alt="foto-Alex">
             <h1 class="dev-title">Desarollador Web FullStack </h1>
             <p class="paragraf_1">Desarrollo Sitios Web, Servicios Rest, con diferentes tecnologias.</p>
-        </div>
-        <div class="central-image">
-            <img class="mi-logo" src="/images/Logo 6.JPG" alt="">
         </div>
         <div class="presentation">
             <h2 class="present">Hola, soy Alex. Un placer Conocerte</h2>
