--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto</title>
-    <link rel="stylesheet" href="/css/estilosC.css">
+    <link rel="stylesheet" href="./css/estilosC.css">
     <script src="https://smtpjs.com/v3/smtp.js"></script>
 </head>
 <body>
