--- a/contact.html
+++ b/contact.html
@@ -25,13 +25,13 @@
         
         <div class="contact">            
             <span>
-                <img class="logo_tel" src="/images/call_FILL0_wght400_GRAD0_opsz48.png" alt="logo-telefono">
+                <img class="logo_tel" src="./images/call_FILL0_wght400_GRAD0_opsz48.png" alt="logo-telefono">
             </span>
             <p>
                 320 522 99 84
             </p>
             <span>
-                <img class="logo_gmail" src="/images/icons8-gmail-50.png" alt="logo-gmail">                
+                <img class="logo_gmail" src="./images/icons8-gmail-50.png" alt="logo-gmail">                
             </span> 
             <p>
                 alexbolanosmunoz@gmail.com                
